methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:8: error: type mismatch;
 found   : Int
 required: java.awt.Color
        faireV(k)
               ^